style : fixed icon alignment

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ body {
 .navigation {
     background-color: var(--primary-color);
     color: white;
-    padding: 2rem;
+    padding: 1.6rem;
     position: sticky;
     top: 0;
     border-bottom-left-radius: 0.5rem;
@@ -98,10 +98,13 @@ body {
     color: #f0f8ff;
     text-decoration: none;
     border-radius: 5px;
+    transition: all 0.10s linear;
+
 }
 .navigation .link:hover{
     color: rgb(8, 8, 8);
     background: lightsteelblue;
+
 
 }
 
@@ -200,6 +203,10 @@ h1:hover {
 
 .skillTable {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8rem;
+
 }
 
 .tech-list {
@@ -210,7 +217,6 @@ h1:hover {
 
 .skillImg {
     object-fit: contain;
-    width: 20rem;
     height: 4rem;
 }
 
@@ -273,13 +279,18 @@ img {
 }
 
 .footer .link:hover {
-    background-color: #637b9a78;
-    border-radius: 50%;
+    top: -10px;
+    opacity: 0.9;
 }
 
 .footer .link {
-    color: white;
-    height: 5rem;
-    width: 5rem;
-
+    border-radius: 50%;
+    display: inline-flex;
+    margin: 0 0.35rem;
+    position: relative;
+    width: 1rem;
+    color: white;  
+    top: 0;
+    transition: top ease .5s;
+  
 }
